--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/logo-sk.svg" />
+    <!-- Use relative paths so GH Pages subpath works -->
+    <link rel="icon" type="image/svg+xml" href="logo-sk.svg" />
     <title>SK Retention Dashboard</title>
   </head>
   <body class="bg-[#fff7f5]">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Use relative path for entry to avoid blank page on GH Pages -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
